--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <title>hey guys</title>
   <head>
-    <body>
-      <h1> hi guys</h1>
-    </body>
+
   </head>
+  <link rel="stylesheet" href="style.css">
+      <body>
+       <h1 class="MorrisRoman">hi guys im anthony</h1> <br>
+    </body>
 </html>
