--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <link rel="stylesheet" href="style.css">
       <body>
-       <h1 class="MorrisRoman">hi guys im anthony</h1> <br>
+       <h1 class="title-style">hi guys im anthony</h1> <br>
     </body>
 </html>
