--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <title>hey guys</title>
+  <title>anthos blog</title>
+  <link rel="icon" type="image/x-icon" href="/images/spongebob.gif">
   <head>
     <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
