--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
       <body>
        <h1 class="title-style">hi guys im anthony</h1> <br>
+        <div id = "center">
+          
+        </div>
     </body>
 </html>
