--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
       <body>
        <h1 class="title-style">hi guys im anthony</h1> <br>
-        <div id = "center">
+        <div class = "center">
           
         </div>
     </body>
