--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <body>
        <h1 class="title-style">hi guys im anthony</h1> <br>
         <div class = "center">
-          
+          <h1 class = "title-style"> stuff </h1>
         </div>
     </body>
 </html>
