--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
       <body>
        <h1 class="title-style">hi guys im anthony</h1> <br>
-        <div class = "center">
-          <h1 class = "title-style"> stuff </h1>
-        </div>
+        <div class="center">
+  <div id="blog">
+    <p>blog</p>
+  </div>
+</div>
     </body>
 </html>
