--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <link rel="stylesheet" href="style.css">
   </head>
       <body>
-       <h1 class="title-style">hi guys im anthony</h1> <br>
+       <h1 class="title-style">Anthony Dong| Summer 2025</h1> <br>
         <div class="center">
   <div id="blog">
-    <p>blog</p>
+    <p class ="century"> Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State majoring computer science, <br>
+
+Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p>
   </div>
 </div>
     </body>
