--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 <link rel="stylesheet" href="style.css">
   </head>
       <body>
-       <h1 class="title-style">Anthony Dong| Summer 2025</h1> <br>
+       <h1 class="title-style">Anthony Dong | Summer 2025</h1> <br>
         <div class="center">
   <div id="blog">
-    <p class ="century">Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State majoring computer science, <br><br>
-
-Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p>
+    <p class ="News">Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State majoring computer science.</p> <br><br>
+    <p class ="News">Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p>
   </div>
 </div>
     </body>
