--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
        <h1 class="title-style">Anthony Dong | Summer 2025</h1> <br>
         <div class="center">
   <div id="blog">
-    <p class ="News">Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State majoring computer science.</p> <br><br>
-    <p class ="News">Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p>
+    <p>Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State majoring Computer Science.</p> <br><br>
+    <p>Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p><br><br>
+    <p><a href ="https://github.com/anthonydong21> github </p>
   </div>
 </div>
     </body>
