--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="blog">
     <p class = "News">Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State majoring Computer Science.</p> 
     <p class = "News">Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p><br><br>
-    <p class = "News"><a href ="https://github.com/anthonydong21">github</a></p>
+    <p class = "News"><a href ="https://github.com/anthonydong21">Github  </a> <a href = "https://www.linkedin.com/in/anthonydong21"> LinkedIn/</p>
 
   </div>
 </div>
