--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
        <h1 class="title-style">Anthony Dong | Summer 2025</h1> <br>
         <div class="center">
   <div id="blog">
-    <p class = "MorrisBig">About Me</p>
+    <h1 class = "MorrisBig">About Me</h1>
     <p class = "News">Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State majoring Computer Science.</p> 
     <p class = "News">Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p><br><br>
      <p class="Morris">
           <a href="https://github.com/anthonydong21">GitHub</a> | 
           <a href="https://www.linkedin.com/in/anthonydong21">LinkedIn</a>
         </p>
+
+<br><br>
+<h1 class = "MorrisBig"> Week 1: </h1>
+<p class ="News"> For the summer of 2025, I am currently an undergraduate researcher for Computing Research Associate (CRA) and UR2PHD. With the help of my other undergraduate researcher, Windtell Souphavong and my 2 graduate mentors, Joan Zheng and William Wyatt, we are developing a Discord chatbot to assist and promote retention in students in their early academic career, specifically those in STEM. Computer Science has one of the highest dropout rates and an issue like this stems from many different factors, those that we plan to address in our project. So far, I have been tasked by my graduate mentors to explore and learn creating a discord bot API through Python (SHOW LINK). So far I have learned a lot of basics as well as understand Python much better which I'm very excited to keep continuing with. As of now, the bot can respond to both a help command and give a vast variety of jokes sourced from the now shut down game "ToonTown". I would like to give a shoutout to both my graduate mentors who have helped me a lot, specifically Joan Zheng who has constantly pushed me to be the best version of myself!</p>
+
 
   </div>
 </div>
