--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 
 <br><br>
 <h1 class = "MorrisBig"> Week 1: </h1>
-<p class ="News"> For the summer of 2025, I am currently an undergraduate researcher for Computing Research Associate (CRA) and UR2PHD. With the help of my other undergraduate researcher, Windtell Souphavong and my 2 graduate mentors, Joan Zheng and William Wyatt, we are developing a Discord chatbot to assist and promote retention in students in their early academic career, specifically those in STEM. Computer Science has one of the highest dropout rates and an issue like this stems from many different factors, those that we plan to address in our project. So far, I have been tasked by my graduate mentors to explore and learn creating a <a href="https://github.com/anthonydong21/discordbotsummer2025">discord bot API through Python </a>. So far I have learned a lot of basics as well as understand Python much better which I'm very excited to keep continuing with. As of now, the bot can respond to both a help command and give a vast variety of jokes sourced from the now shut down game "ToonTown". I would like to give a shoutout to both my graduate mentors who have helped me a lot, specifically Joan Zheng who has constantly pushed me to be the best version of myself!</p>
+<p class ="News"> For the summer of 2025, I am currently an undergraduate researcher for Computing Research Associate (CRA) 
+  and UR2PHD. With the help of my other undergraduate researcher, Windtell Souphavong and my 2 graduate mentors, Joan Zheng and William Wyatt, 
+  we are developing a Discord chatbot to assist and promote retention in students in their early academic career, specifically those in STEM. Computer Science has one of the highest dropout rates 
+  and an issue like this stems from many different factors, those that we plan to address in our project. Our chatbot is informed by design principles as described in (Stattkus, <a href="https://www.researchgate.net/publication/381323289_A_Blueprint_for_Breaking_Stereotypes_Design_Principles_for_Conversational_Agents_to_Empower_Girls_in_Computer_Science_Education">2024 </a>)
+  and uses a RAG-based framework  for knowledge retrieval and answer generation (Lewis,  <a href="https://arxiv.org/abs/2005.11401">2021 </a>)).So far, I have been tasked by my graduate mentors to explore and learn creating 
+  a <a href="https://github.com/anthonydong21/discordbotsummer2025">discord bot API through Python </a>. So far I have learned a lot of basics as well as understand Python much better which
+  I'm very excited to keep continuing with. As of now, the bot can respond to both a help command and give a vast variety of jokes sourced from the now shut down game "ToonTown". 
+  I would like to give a shoutout to both my graduate mentors who have helped me a lot, especially Joan Zheng who has constantly pushed me to be the best version of myself!</p>
 
 
   </div>
