--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="center">
   <div id="blog">
     <h1 class = "MorrisBig">About Me</h1>
-    <p class = "News">Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State majoring Computer Science.</p> 
+    <p class = "News">Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State University majoring Computer Science.</p> 
     <p class = "News">Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p><br><br>
      <p class="Morris">
           <a href="https://github.com/anthonydong21">GitHub</a> | 
