--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         </p>
 
 <br><br>
+    <h1 class = "MorrisBig"> Week 2, June 13th 2025: </h1>
+<p class ="News"> This week focused on the importance of setting up everything for future weeks, especially for the UR2PHD course. In our course we learned what 
+  latex is, a document markup language that is used in professional settings, specifically research papers. The latex editor we used was overleaf and I found it 
+  to be very simple to use, especially when we are also given multiple examples to view to help formatting!
+  </p>
+    
 <h1 class = "MorrisBig"> Week 1, June 6th 2025: </h1>
 <p class ="News"> This week was very important to establish expecations/get into the mindset of everything. I am getting into the groove of doing everything
   so far related to the CRA class so that I can also delegate time to both the discord research bot and my summer classes. This week I was able to import google gemini to 
