--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
         </p>
 
 <br><br>
+
+    <h1 class = "MorrisBig"> Week 5, July 3rd 2025: </h1>
+<p class ="News">  We can now apply for REU funding this week so that is the first thing I did, this is also the last week of the UR2PHD course and I'm very grateful I had the opportunity to be a part of this class and these skills
+  will forever stay with me in the future. Highlights to me were listening to the workshops, talking to other students and what their research topics were, and being able to get as much work done in a short amount of time. This was also the 
+  week for getting the final submissions of TrueNorths Conference Submission for AIxHeart. I'm still learning the techniques/terminiology used in the papers to convey as many points across as efficiently as possible but it looked all very well written to me.
+  </p>
+    
+    <h1 class = "MorrisBig"> Week 4, June 27th 2025: </h1>
+<p class ="News">  Not too much happened this week so I will focus time on my own thoughts as well. We spent time looking/refining our proposal, it's important for me to be as accurate as possible / use correct terminology because
+  I value not spreading misinformation. I am also representing someone elses project and expanding it at the same time so I have been working closely with Joan and going back and fourth to make sure that we are always on the same page.
+  In our UR2PHD class, the final project calls for a presentation/video detailing our proposal. I love editing because in a way it is very therapeutic to me so I am taking the initative to start and get B-roll early with Windtell. Adding on to the class, although it is incredibly condensed/short,
+  I have learned a lot so far about research and the community that entails in it. We are usually given a few papers to read or to choose papers related to the research we would like to pursue and it's just always interesting to see what different perspectives
+  there are/methods they use to highlight their findings.
+  </p>
+
+    <h1 class = "MorrisBig"> Week 3, June 20th 2025: </h1>
+<p class ="News"> William has set up his server this week, we will access it through the terminal and ssh. Our goal in the future is to experiment/install the base TrueNorth implementation on the server and later on implement the Discord portions. 
+  I'm really excited to see what occurs in the future with Williams server! We also had a meeting with everyone, mainly just housekeeping and to check where everyone is at! I find the check ins to be very helpful as well as always having a roadmap in mind. In our UR2PHD training class,
+  we are now starting our proposal, in our case we are expanding TrueNorths implementations of assisting those underrepresented in STEM. The goal of the proposal is to be able to use Discord as a way to gain a larger audience/exposure to TrueNorth!
+  </p>
+    
     <h1 class = "MorrisBig"> Week 2, June 13th 2025: </h1>
 <p class ="News"> This week focused on the importance of setting up everything for future weeks, especially for the UR2PHD course. In our course we learned what 
   latex is, a document markup language that is used in professional settings, specifically research papers. The latex editor we used was overleaf and I found it 
