--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     <h1 class = "MorrisBig"> Week 3, June 20th 2025: </h1>
 <p class ="News"> William has set up his server this week, we will access it through the terminal and ssh. Our goal in the future is to experiment/install the base TrueNorth implementation on the server and later on implement the Discord portions. 
   I'm really excited to see what occurs in the future with Williams server! We also had a meeting with everyone, mainly just housekeeping and to check where everyone is at! I find the check ins to be very helpful as well as always having a roadmap in mind. In our UR2PHD training class,
-  we are now starting our proposal, in our case we are expanding TrueNorths implementations of assisting those underrepresented in STEM. The goal of the proposal is to be able to use Discord as a way to gain a larger audience/exposure to TrueNorth!
+  we are now starting our proposal, in our case we are expanding TrueNorths implementations of assisting those underrepresented in STEM. The goal of the proposal is to be able to use Discord as a way to gain a larger audience/exposure to TrueNorth! We also went further in depth
+  about PERMA +4 implementations and reading citations related to its strengths.
+  <img src="images/perma.png" width="500px">
+  <img src="images/perma2.png" width="500px">
   </p>
     
     <h1 class = "MorrisBig"> Week 2, June 13th 2025: </h1>
