--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <h1 class = "MorrisBig"> Week 5, July 3rd 2025: </h1>
 <p class ="News">  We can now apply for REU funding this week so that is the first thing I did, this is also the last week of the UR2PHD course and I'm very grateful I had the opportunity to be a part of this class and these skills
   will forever stay with me in the future. Highlights to me were listening to the workshops, talking to other students and what their research topics were, and being able to get as much work done in a short amount of time. This was also the 
-  week for getting the final submissions of TrueNorths Conference Submission for AIxHeart. I'm still learning the techniques/terminiology used in the papers to convey as many points across as efficiently as possible but it looked all very well written to me.
+  week for getting the final submissions of TrueNorths Conference Submission for AIxHeart. I'm still learning the techniques/terminiology used in the papers to convey as many points across as efficiently as possible but it looked all very well written to me. Below I show my favorite part of it all, making an edit that means something to others.
+  <img src="images/videoedit.png" width="500px">
   </p>
     
     <h1 class = "MorrisBig"> Week 4, June 27th 2025: </h1>
@@ -37,6 +38,7 @@
   In our UR2PHD class, the final project calls for a presentation/video detailing our proposal. I love editing because in a way it is very therapeutic to me so I am taking the initative to start and get B-roll early with Windtell. Adding on to the class, although it is incredibly condensed/short,
   I have learned a lot so far about research and the community that entails in it. We are usually given a few papers to read or to choose papers related to the research we would like to pursue and it's just always interesting to see what different perspectives
   there are/methods they use to highlight their findings.
+  <img src="images/feedback.png" width="500px">
   </p>
 
     <h1 class = "MorrisBig"> Week 3, June 20th 2025: </h1>
