--- a/index.html
+++ b/index.html
@@ -53,12 +53,16 @@
     <h1 class = "MorrisBig"> Week 2, June 13th 2025: </h1>
 <p class ="News"> This week focused on the importance of setting up everything for future weeks, especially for the UR2PHD course. In our course we learned what 
   latex is, a document markup language that is used in professional settings, specifically research papers. The latex editor we used was overleaf and I found it 
-  to be very simple to use, especially when we are also given multiple examples to view to help formatting!
+  to be very simple to use, especially when we are also given multiple examples to view to help formatting! Below I highlight 2 research papers I have read so far in the UR2PHD class, it gives me a much better insight on what kind of community is present on Discord
+  and how we should be taking steps forward to account for that.
+    <img src="images/paper1.png" width="500px">
+  <img src="images/paper2.png" width="500px">
+  
   </p>
     
 <h1 class = "MorrisBig"> Week 1, June 6th 2025: </h1>
 <p class ="News"> This week was very important to establish expecations/get into the mindset of everything. I am getting into the groove of doing everything
-  so far related to the CRA class so that I can also delegate time to both the discord research bot and my summer classes. This week I was able to import google gemini to 
+  so far related to the UR2PHD class so that I can also delegate time to both the discord research bot and my summer classes. This week I was able to import google gemini to 
   our bot so theres an opportunity to be able to use its features. A current roadblock is the free trial stopping us due to the fact that it is easy to hit the trial limit.
   I am most excited about learning how to be more of a professional in the workforce as well as being able to read and analyze research papers more efficiently!
   </p>
