--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <h1 class = "MorrisBig"> Week 5, July 3rd 2025: </h1>
 <p class ="News">  We can now apply for REU funding this week so that is the first thing I did, this is also the last week of the UR2PHD course and I'm very grateful I had the opportunity to be a part of this class and these skills
   will forever stay with me in the future. Highlights to me were listening to the workshops, talking to other students and what their research topics were, and being able to get as much work done in a short amount of time. This was also the 
-  week for getting the final submissions of TrueNorths Conference Submission for AIxHeart. I'm still learning the techniques/terminiology used in the papers to convey as many points across as efficiently as possible but it looked all very well written to me. Below I show my favorite part of it all, making an edit that means something to others.
+  week for getting the final submissions of TrueNorths Conference Submission for AIxHeart. I'm still learning the techniques/terminiology used in the papers to convey as many points across as efficiently as possible but it looked all very well written to me.
+  Below I show my favorite part of it all, making an edit that means something to others. <br>
   <img src="images/videoedit.png" width="500px">
   </p>
     
