--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 <p class ="News"> This week focused on the importance of setting up everything for future weeks, especially for the UR2PHD course. In our course we learned what 
   latex is, a document markup language that is used in professional settings, specifically research papers. The latex editor we used was overleaf and I found it 
   to be very simple to use, especially when we are also given multiple examples to view to help formatting! Below I highlight 2 research papers I have read so far in the UR2PHD class, it gives me a much better insight on what kind of community is present on Discord
-  and how we should be taking steps forward to account for that.
-    <img src="images/paper1.png" width="500px">
-  <img src="images/paper2.png" width="500px">
+  and how we should be taking steps forward to account for that. <br>
+    <img src="images/paper1.png" width="450px">
+  <img src="images/paper2.png" width="450px">
   
   </p>
     
