--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <h1 class = "MorrisBig"> Week 6, July 10th 2025: </h1>
 <p class ="News">  I had some fun this week, with the help of Joan I managed to set up basically what is the entirity of TrueNorth on Williams server with a lot of trial and error. It was a lot of back and fourth but I'm glad Joan answered all my questions since I
   did have a lot. The main ideas were installing Poetry, a depedency manager for Python, cloning the github repo of TrueNorth, editing the env file to import our own API key and manually inserting all the pdfs of books that will be used through zip file. This process took 
-  around a couple of hours but I learned a lot of ideas/terms which I prioritize over all else. I was also able to get my Gemini key to work through the free trial given to students so now the Discord bot can be expanded for the future!
+  around a couple of hours but I learned a lot of ideas/terms which I prioritize over all else. I was also able to get my Gemini key to work through the free trial given to students so now the Discord bot can be expanded for the future! <br>
+  <img src="images/server1.png" width="450px">
+  <img src="images/server2.png" width="450px">
   </p>
 
     <h1 class = "MorrisBig"> Week 5, July 3rd 2025: </h1>
