--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         </p>
 
 <br><br>
+
+    <h1 class = "MorrisBig"> Week 7, July 17th 2025: </h1>
+<p class ="News">  Another slow week but I took the time to try to expand upon the Discord portion of TrueNorth, specifically with optimization and censoring/accounting for abuse or hate speech.
+  We also took the time this week to ask ourselves what possible ideas can we incorporate to give potential users a say/ give feedback. On Discord, reactions with emojis are a quick and simple way but they can be vague or too simple.
+  Another method could just be straight up telling the bot what you think or having a rating system of stars.<br>
+    <img src="images/feedback2.png" width="450px">
+  </p>
+    
     <h1 class = "MorrisBig"> Week 6, July 10th 2025: </h1>
 <p class ="News">  I had some fun this week, with the help of Joan I managed to set up basically what is the entirity of TrueNorth on Williams server with a lot of trial and error. It was a lot of back and fourth but I'm glad Joan answered all my questions since I
   did have a lot. The main ideas were installing Poetry, a depedency manager for Python, cloning the github repo of TrueNorth, editing the env file to import our own API key and manually inserting all the pdfs of books that will be used through zip file. This process took 
