--- a/index.html
+++ b/index.html
@@ -12,13 +12,34 @@
   <div id="blog">
     <h1 class = "MorrisBig">About Me</h1>
     <p class = "News">Hi everyone, my name is Anthony Dong, I am an undergraduate at San Francisco State University majoring Computer Science.</p> 
-    <p class = "News">Some cool hobbies I would like to share is my love for Star Wars, gaming, talking with friends and working out!</p><br><br>
+    <p class = "News">Some cool hobbies I would like to share is my love for Star Wars, gaming, hanging out with friends and working out!</p><br><br>
      <p class="Morris">
           <a href="https://github.com/anthonydong21">GitHub</a> | 
           <a href="https://www.linkedin.com/in/anthonydong21">LinkedIn</a>
         </p>
 
 <br><br>
+   <h1 class = "MorrisBig"> Week 10, August 7th 2025: </h1>
+<p class ="News">  Final week! I've had such a great time documenting, learning and applying myself to everything given in my research. I was asked to write a letter of recommendation for my graduate mentor Joan in support of access to a potential
+computing lab. I feel incredibly honored to do such task and I hope my words have an impact on their decision! This week was also sadly the announcement of the closing of Williams server. I'm grateful for all the playtesting and all the work we were able to
+  do on his server! I think ending this log with our reflecting on our past, present and future is fitting. The past shows us the eventful journey we have went through in the past week, our current present in an ever evolving and changing environment and ending
+  with the future. The future of TrueNorth is something I'm excited to journey on with everyone else and I'll be sure to be on the frontlines for whatever endeavors occur! <br>
+
+    
+            <h1 class = "MorrisBig"> Week 9, July 31st 2025: </h1>
+<p class ="News">  Starting off this week with the theme of security in our minds, we talked about potential cybersecruity risks/breaches regarding furture development for TrueNorth. Prompt injection is something that we have to account for in the future since its such a simple
+  yet destructive concept. Storing user data is also something that should be accounted for if that happens and how that happens.
+  Possible ideas thrown out were a HIPAA-certified data buckets, usually designed to store and secure healthcare data but would also be beneficial in this context. I learned this week what "prips" was from Joan, a very overpowered tool used to print ip addresses in a range. If this
+  were to hit something like TrueNorth it would get all the users that have used it which would cause tremendous problems, something we have to look out for in the coming months.<br>
+  <img src="images/prip.png" width="450px">
+  
+        <h1 class = "MorrisBig"> Week 8, July 24th 2025: </h1>
+<p class ="News">  I was recommended an <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=QTf1OTMAAAAJ&sortby=pubdate&citation_for_view=QTf1OTMAAAAJ:bEWYMUwI8FkC">article</a> by Joan regarding engagement for large language models and 
+  how to traverse this sort of environment. At times, the current information can be vague or unintentionally group voices that lessen the diverse annotations on datasets. This is mainly due to the Machine Learning Community prioritzing on a large language model with as much
+  information as possible, sacrificing quality for numbers. I thought it was a good read and eye opener for this topic that I learned about recently in the past week! We are near the end of this log, I feel very grateful for this opportunity and chance to be a part of something
+  greater for a greater cause.<br>
+   
+  </p>
 
     <h1 class = "MorrisBig"> Week 7, July 17th 2025: </h1>
 <p class ="News">  Another slow week but I took the time to try to expand upon the Discord portion of TrueNorth, specifically with optimization and censoring/accounting for abuse or hate speech.
