--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ computing lab. I feel incredibly honored to do such task and I hope my words hav
         <h1 class = "MorrisBig"> Week 8, July 24th 2025: </h1>
 <p class ="News">  I was recommended an <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=QTf1OTMAAAAJ&sortby=pubdate&citation_for_view=QTf1OTMAAAAJ:bEWYMUwI8FkC">article</a> by Joan regarding engagement for large language models and 
   how to traverse this sort of environment. At times, the current information can be vague or unintentionally group voices that lessen the diverse annotations on datasets. This is mainly due to the Machine Learning Community prioritzing on a large language model with as much
-  information as possible, sacrificing quality for numbers. I thought it was a good read and eye opener for this topic that I learned about recently in the past week! We are near the end of this log, I feel very grateful for this opportunity and chance to be a part of something
-  greater for a greater cause.<br>
+  information as possible, sacrificing quality for numbers. I thought it was a good read and eye opener for this topic that I learned about recently in the past week! We are near the end of this log, once again I feel very grateful for this opportunity and chance to be a part of something for a greater cause.<br>
    
   </p>
 
